check for unique id, added redirects

--- a/Project/admineditArtifacts.html
+++ b/Project/admineditArtifacts.html
@@ -230,7 +230,9 @@
 					type: "POST",
 					contentType: "application/x-www-form-urlencoded; charset=utf-8",
 					data: hi,
-					success: function (result) {},
+					success: function (result) {
+						location.href = "../Project/adminartifacts.html";
+					},
 				});
 			}
 		</script>
