--- a/Project/admineditEvents.html
+++ b/Project/admineditEvents.html
@@ -210,7 +210,9 @@
 					type: "POST",
 					contentType: "application/x-www-form-urlencoded; charset=utf-8",
 					data: hi,
-					success: function (result) {},
+					success: function (result) {
+						location.href = "../Project/adminartifacts.html";
+					},
 				});
 			}
 		</script>
