randomize quiz questions

--- a/Project/events.html
+++ b/Project/events.html
@@ -28,11 +28,11 @@
 					contentType: "application/json; charset=utf-8",
 					success: function (data) {
 						//on success render the returned data
-						console.log(data);
+						//console.log(data);
 
 						//loop each json object and render it in HTML
 						for (var i = 0; i < data.length; i++) {
-							console.log(data[i]);
+							//console.log(data[i]);
 							var divRow = document.createElement("div");
 							divRow.classList.add("row", "justify-content-center");
 
