--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -77,7 +77,7 @@
 			contentType: "application/json; charset=utf-8",
 			success: function (data) {
 				//on success render the returned data
-				console.log(data);
+				//console.log(data);
 
 				var description = document.getElementById("descriptionText");
 				description.innerHTML = data[0].description;
