--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -21,7 +21,7 @@
 				  contentType: "application/json; charset=utf-8",
           success:function(data){
 
-            console.log(data);
+            //console.log(data);
             
             var pic = document.getElementById("eventpic");
             pic.src = "Images/" + data[0].image_source;
