scrollable content in  timeline

--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -96,7 +96,7 @@
 
 				var floorPlan = document.createElement("img");
 				floorPlan.src = "Images/Room" + data[0].location_id + ".jpeg";
-				floorPlan.setAttribute("style", "max-width:90%;");
+				floorPlan.setAttribute("style", "max-width: 15vw;");
 				document.getElementById("roomLocation").appendChild(floorPlan);
 
 				var relatedTopic = document.getElementById("relatedTopic");
@@ -116,15 +116,8 @@
 		</div>
 
 		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-auto mx-auto mt-2">
-					<img
-						src="https://via.placeholder.com/250x250"
-						class="img-fluid"
-						alt="Artifact Image"
-						id="artifactImage"
-					/>
-				</div>
+			<div class="row justify-content-center">
+				<img src="https://via.placeholder.com/250x250" class="img-fluid" alt="Artifact Image" id="artifactImage" />
 			</div>
 		</div>
 
