--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -203,14 +203,14 @@
 			.centered {
 				position: fixed;
 				bottom: 6vh;
-				left: 43%;
+				left: 41%;
 				transform: translateX(-50%);
 				z-index: 9999;
 				padding: 10px;
 			}
 
 			.form-range {
-				width: 150%;
+				width: 200%;
 			}
 
 			.area {
@@ -242,8 +242,7 @@
 				</div>
 			</div>
 
-			<div class="form-group centered">
-				<label for="range">Position out of all artifacts</label>
+			<div class="col-2 form-group centered">
 				<input type="range" class="form-range" id="range" min="0" max="100" step="1">
 			  </div>
 		</div>
